# portfolio

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: deploy.yml
backend/: Dockerfile  README.md  app.py  config.py  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py
backend/app/chess/: __init__.py  events.py  routes.py
backend/app/katex/: __init__.py  events.py  routes.py
backend/katex/: katex.py
backend/routes/: katex.py
cypress/e2e/: standard.cy.js
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/cypress/e2e/: standard.cy.js
frontend/src/: App.tsx  Portfolio.tsx  SelectedContext.tsx  main.tsx
frontend/src/components/: About.tsx  ContentScroller.tsx  Projects.tsx
frontend/src/components/KaTeX/: AdminView.tsx  GameOverStage.tsx  GameStage.tsx  JoinStage.tsx  KaTeX.tsx  Leaderboard.tsx  UserView.tsx
frontend/src/pages/chess/: Chess.tsx
frontend/src/pages/chess/components/: Board.tsx  Game.tsx
src/: App.tsx  Header.tsx  KaTeX.tsx  SelectedContext.tsx  index.css  main.tsx
src/components/: Corners.tsx  Header.tsx  Headers.tsx
