[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Anshuman Dash <anshuman@ucsb.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-cors = "^5.0.0"
flask-socketio = "^5.4.1"
sympy = "^1.13.3"
antlr4-python3-runtime = "4.11"
gunicorn = "^23.0.0"
gevent = "^24.10.3"
gevent-websocket = "^0.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
